fix padding on small screens

--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ section h2 {
     justify-content: center;
     margin-top: 5em;
     width: 70%;
+    column-gap: 2em;
 }
 
 @media only screen and (max-width: 600px) {
